# Simpliest-multilayer-perceptron

./: CMakeLists.txt  header2.pgm  main.cpp
include/: Layer.hpp  MLPerceptron.hpp  Neuron.hpp  functions.hpp
